<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragmentFaceMeasurement">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start_measurement"
        app:layout_constraintTop_toTopOf="parent" >
    </Button>

    <com.galenit.component.binah.BinahView
        android:id="@+id/cameraView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="W, 4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonStart"
        app:mode="face" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/cameraView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_saturation_results">
                </TextView>

                <TextView
                    style="@style/TextViewResult"
                    android:id="@+id/textViewSaturation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_pulse_rate_results">
                </TextView>

                <TextView
                    style="@style/TextViewResult"
                    android:id="@+id/textViewPulseRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_breathing_rate_results">
                </TextView>

                <TextView
                    style="@style/TextViewResult"
                    android:id="@+id/textViewBreathingRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_SDNNHeartRateVariability_results">
                </TextView>

                <TextView
                    style="@style/TextViewResult"
                    android:id="@+id/textViewSDNNHeartRateVariability"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_stress_level_results">
                </TextView>

                <TextView
                    style="@style/TextViewResult"
                    android:id="@+id/textViewStressLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_blood_pressure_results">
                </TextView>

                <TextView
                    style="@style/TextViewResult"
                    android:id="@+id/textViewBloodPressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>